Fixed up the totals row so that it was visible without scrolling on a small screen but maintains its place at the bottom of the table on larger screens without hiding any table rows; made the filter criteria section collapsible to save screen space by default; modified the TableHeader component into a PageHeader component and replaced the static h2 title tag at the top of the page; next step is to clean up the CSS rules

--- a/frontend/src/components/reportPage.css
+++ b/frontend/src/components/reportPage.css
@@ -9,9 +9,27 @@
 }
 
 .reportActions {
-    margin-top: -30px;
+    margin-top: 0px;
 }
 
 .pageTitle {
     margin: 10px auto; 
+}
+
+.outagesTable {
+    position: relative;
+    margin: '20px,20px,20px,20px';
+    /* max-height: '55vh'; */
+    width: 'calc(100% - 5px)';
+}
+
+.totalsTable {
+    position: sticky;
+    bottom: 0;
+}
+
+.dataTables_wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
